--- a/src/components/top-navbar-styles.module.scss
+++ b/src/components/top-navbar-styles.module.scss
@@ -269,7 +269,7 @@ $transitionTime: 0.5s;
       
       @include wood.straight-grain-1-walnut-light-border(90deg, 25);
 
-      @include wood.straight-grain-1-walnut-dark-bg(90deg);
+      @include wood.straight-grain-1-pine-light-bg(90deg);
 
       overflow-x: hidden;
 
@@ -280,11 +280,19 @@ $transitionTime: 0.5s;
       .link {
         display: block; //make elements of navbar display up to down instead of left to right
         padding: 1em;
+
+        margin: 0 10px;
+        margin-top: 10px;
+        border-radius: 10px;
       }
 
       .social-container {
         display: block;
         @include wood.straight-grain-1-walnut-light-bg(0deg);
+
+        margin: 0 10px;
+        margin-top: 10px;
+        border-radius: 10px;
       }
 
       //add a partially transparent black background so that each odd child element appears
