Started creating workaround  for not being able to layer multiple images on a border image by creating a background with 4 linear gradients that act as a border. This is done so that I could create wooden picture frames in the future.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -93,6 +93,14 @@
     }
   }
 
+  .educationWrapper {
+    .educationContent {
+      width: 600px;
+      height: 600px;
+      @include wood.straight-grain-1-basswood-light-border-bg();
+    }
+  }
+
   .resume-pdf-wrapper {
     width: 80%;
     margin-left: 10%;
