--- a/src/styles/_wood-theme.scss
+++ b/src/styles/_wood-theme.scss
@@ -38,6 +38,74 @@ $walnut-dark2: rgb(40, 20, 0);
   );
 }
 
+@function straight-grain-1-border-bg-segment($degree, $offset, $color0, $color1, $color2) {
+  @return linear-gradient(
+    $degree, 
+    $color0 0px + $offset, 
+    $color0 4px + $offset, 
+    $color1 4px + $offset, 
+    $color1 6px + $offset,
+    $color0 6px + $offset, 
+    $color0 10px + $offset, 
+    $color2 10px + $offset, 
+    $color2 14px + $offset, 
+    $color0 14px + $offset, 
+    $color0 18px + $offset, 
+    $color1 18px + $offset, 
+    $color1 20px + $offset
+  );
+}
+
+@mixin straight-grain-1-border-bg($color0, $color1, $color2) {
+  
+  background:  
+
+  //top border
+  straight-grain-1-border-bg-segment(
+    0deg, 
+    0,
+    $color0, 
+    $color1, 
+    $color2
+  ), 
+
+  //bottom border
+  straight-grain-1-border-bg-segment(
+    0deg,
+    0px,
+    $color0, 
+    $color1, 
+    $color2
+  ),
+
+  
+  //left border
+  straight-grain-1-border-bg-segment(
+    90deg,
+    0px,
+    $color0, 
+    $color1, 
+    $color2
+  ),
+
+  //right border
+  straight-grain-1-border-bg-segment(
+    90deg,
+    0px,
+    $color0, 
+    $color1, 
+    $color2
+  )
+
+  ;
+
+  background-size: 100% 20px, 100% 20px, 20px 100%, 20px 100%;
+  background-position: top, bottom, left, right;
+  background-repeat: no-repeat;
+  padding: 20px;
+  
+}
+
 @mixin straight-grain-1-bg($degree: 0deg, $color0, $color1, $color2) {
   background: straight-grain-1($degree, $color0, $color1, $color2);
 }
@@ -141,3 +209,8 @@ $walnut-dark2: rgb(40, 20, 0);
     $walnut-dark2
   );
 }
+
+@mixin straight-grain-1-basswood-light-border-bg() {
+  @include straight-grain-1-border-bg($basswood-light0, $basswood-light1, $basswood-light1);
+}
+
