--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -94,10 +94,16 @@
   }
 
   .educationWrapper {
-    .educationContent {
+    .educationContentBorder {
       width: 600px;
       height: 600px;
-      @include wood.straight-grain-1-basswood-light-border-bg();
+      @include wood.straight-grain-1-pine-dark-border-bg(50px);
+
+      .educationContent {
+        width: 100%;
+        height: 100%;
+        @include wood.straight-grain-1-walnut-light-bg(0deg);
+      }
     }
   }
 
@@ -107,13 +113,6 @@
     margin-right: 10%;
     height: 500px;
     background-color: white;
-  }
-
-  .heroBackgroundCanvas {
-    width: 80%;
-    height: 400px;
-    margin-left: 10%;
-    margin-right: 10%; 
   }
 }
 
