--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,15 +1,5 @@
 @use 'wood-theme' as wood;
-:root {
-  //dimensions
-  --navbar-height: 90px;
-  --navbar-padding-except-bottom: 20px;
-  --footer-height: 90px;
-
-  //colors
-  --gold-1: rgb(228, 232, 0);
-  --gold-2: rgb(255, 238, 1);
-
-}
+@use 'global-variables' as globals;
 
 * {
   padding: 0;
@@ -40,11 +30,11 @@ html {
   //because the navbar has a position of fixed.
   //Thus, the page will not change on its own to move content
   //out from under the navbar
-  padding-top: calc(var(--navbar-height) - var(--navbar-padding-except-bottom));
+  padding-top: globals.$navbar-height;
 
   //make sure minimum height of the wrapper is the height of the viewport minus the heights of the navbar and footer.
   //that way, if there is not enough content to fill the page, the footer will still be fully visible
   //while staying at the bottom of the viewport
-  min-height: calc(100vh - var(--navbar-height) - var(--footer-height)); 
+  min-height: calc(100vh - globals.$navbar-height - globals.$footer-height); 
 }
 
