Changed the text in the pitch statement and cleaned up some of the code in the toolbox component.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -95,9 +95,11 @@
 
   .educationWrapper {
     .educationContentBorder {
+      margin: auto;
       width: 600px;
       height: 600px;
       @include wood.straight-grain-1-pine-dark-border-bg(50px);
+      border-radius: 10px;
 
       .educationContent {
         width: 100%;
