Modified about section to use cards in a grid to display info about myself. Also fixed some minor sizing issue for the footer. Also removed the education and experience sections and replaced them with the projects section.

--- a/src/components/footer-styles.module.scss
+++ b/src/components/footer-styles.module.scss
@@ -1,7 +1,8 @@
 @use "wood-theme" as wood;
+@use "global-variables" as globals;
 
 .footer {
-  height: var(--footer-height);
+  height: globals.$footer-height;
   @include wood.straight-grain-1-walnut-light-bg(0deg);
 
   a {
