--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -8,7 +8,7 @@
 
     border-radius: 10px;
 
-    color: wood.$basswood-light0;
+    color: wood.$walnut-dark0;
     @include wood.straight-grain-1-pine-dark-bg(0deg);
   }
 
@@ -69,21 +69,14 @@
   .aboutWrapper {
     width: 80%;
     margin: auto;
-    h3 {
-      color: wood.$basswood-light0;
-    }
 
-    .aboutDesc {
-      @include wood.straight-grain-1-walnut-light-bg(0deg);
-      margin: 1em 0;
-      padding: 1em;
-
-      border-radius: 10px;
-
-      color: wood.$basswood-light0;
-      line-height: 1.5em;
-      font-size: 1em;
-      font-weight: bold;
+    .cardContainer {
+      width: 100%;
+      display: grid;
+      grid-auto-rows: 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1em;
+      justify-content: center;
     }
   }
 
@@ -93,15 +86,17 @@
     }
   }
 
-  .educationWrapper {
-    .educationContentBorder {
-      margin: auto;
-      width: 600px;
-      height: 600px;
+  .projectWrapper {
+    margin: auto;
+    width: 80%;
+
+    .testBorder {
+      width: 100%;
+      aspect-ratio: 1/1;
       @include wood.straight-grain-1-pine-dark-border-bg(50px);
       border-radius: 10px;
 
-      .educationContent {
+      .testBorderContent {
         width: 100%;
         height: 100%;
         @include wood.straight-grain-1-walnut-light-bg(0deg);
