--- a/src/components/top-navbar-styles.module.scss
+++ b/src/components/top-navbar-styles.module.scss
@@ -77,6 +77,7 @@ $transitionTime: 0.5s;
       display: block;
       color: wood.$basswood-light0;
       text-align: center;
+      white-space: nowrap; //dont let text wrap around
       font-size: 1.7em;
     }
   }
@@ -107,6 +108,7 @@ $transitionTime: 0.5s;
       text-decoration: none;
       color: wood.$basswood-light0;
       font-weight: bold;
+      white-space: nowrap; //dont let text wrap around
 
       padding: 0.5em 1em 0.5em 1em;
     }
